# covers

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
covers/: Cargo.toml
covers/src/: lib.rs
covers_it/: Cargo.toml
covers_it/src/: main.rs
impl/: Cargo.toml  lib.rs
src/: demo.rs  lib.rs
