[package]
name = "covers"
version = "0.1.0-beta.5"
authors = ["Vasily Bolgar <vasily.bolgar@gmail.com>"]
edition = "2018"

description = "Lightweight library allowing to mock functions in Rust"
homepage = "https://github.com/reanimatorzon/covers"
repository = "https://github.com/reanimatorzon/covers"
readme = "../README.md"
license-file = "../LICENSE.md"
keywords = ["rust", "mock", "fn", "function"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true
doctest = false
harness = true

[features]
default = []
__ = []
_orig_ = []




