[package]
name = "covers"
version = "0.1.0-beta.6"
authors = ["Vasily Bolgar <vasily.bolgar@gmail.com>"]
edition = "2018"

description = "Lightweight library allowing to mock functions in Rust"
homepage = "https://github.com/reanimatorzon/covers"
repository = "https://github.com/reanimatorzon/covers"
readme = "../README.md"
license-file = "../LICENSE.md"
keywords = ["rust", "mock", "fn", "function"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true
doctest = false
harness = true

[features]
default = []

# switches prefix to double underscore: "__"
# example `one` => `__one`, `mod::one` to `mod::__one`, etc.
__ = []
# switches prefix to longer version - "_orig_"
_orig_ = []
# functions denoted as '#[mock]' become public by default,
# this flag disables this feature
no-pub = []



