[package]
name = "covers_impl"
version = "0.1.0-beta.1"
authors = ["Vasily Bolgar <vasily.bolgar@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true
name = "covers_impl"
path = "./lib.rs"
doctest = true
harness = true

# // TODO: check how to pass features
[features]
default = ["_"]
_ = []
__ = []
_orig_ = []



